Add core components and styles for Pip Galaxy website
- Introduced Tailwind CSS for styling with a custom input.css file.
- Created FooterComponent for the website footer with navigation links and social media icons.
- Developed HomeHeader for the fixed navigation bar with mobile menu support.
- Implemented HomeHeroSection to display the hero section with market insights and call-to-action buttons.
- Added HomePageComponents to structure the main content area with market overview, statistics, latest articles, featured tools, and newsletter sections.
- Included GlobalScript for mobile menu toggle functionality.
- Added HomeScript for dynamic header color change on scroll.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tailwindcss -i ./src/assets/css/input.css -o ./public/css/output.css --watch",
+    "build": "tailwindcss -i ./src/assets/css/input.css -o ./public/css/output.css --minify"
   },
   "keywords": [],
   "author": "",
