--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
       }
    ],
    "require": {
-      "dconco/phpspa": "^1.1.5",
+      "dconco/phpspa": "dev-main",
       "vlucas/phpdotenv": "^5.6"
    },
    "scripts": {
