Refactor CSS and PHP structure: Removed old input.css, updated Layout.php to link new tailwind.css, and created a new public/index.php for environment handling. Added comprehensive style definitions in style.css.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-node_modules/
-public/dist/
-vendor/
 .vscode/
+node_modules/
+vendor/
+public/dist/
 .env
 .env.dev
 .env.prod
@@ -9,3 +9,5 @@ vendor/
 .env.development
 .env.production
 composer.lock
+pnpm-lock.yaml
+package-lock.json
