Refactor phpSPA integration: switch to local script file and add new JavaScript engine
- Commented out the external script reference to phpSPA and replaced it with a local version located at /assets/phpspa-1.1.10.js.
- Added the complete phpSPA JavaScript engine code to the project, enabling SPA-style navigation and content management without full page reloads.
- Implemented UTF-8 safe base64 encoding and decoding functions for handling Unicode characters.
- Enhanced navigation handling with event listeners for DOM content loading, link clicks, and browser history navigation.
- Introduced a RuntimeManager class for managing script execution, style injection, and event management within the phpSPA framework.

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
       "vlucas/phpdotenv": "^5.6"
    },
    "scripts": {
-      "start": "php -S localhost:8000 -t src",
+      "start": "php -S localhost:8000 -t public",
       "post-create-project-cmd": [
          "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
          "npm install",
